# mongo-es-comparison

./: .gitignore  README.md  locustfile.py  mongod.yml  pyproject.toml
app/: main.py
app/api/v1/: item.py  user.py
app/crud/: item.py
app/db/: database.py
app/db/mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1667360214558314986.wt  collection-0-7679366227502479572.wt  collection-2-1667360214558314986.wt  collection-4-1667360214558314986.wt  index-1--2556076140054325565.wt  index-1-1667360214558314986.wt  index-1-7679366227502479572.wt  index-3-1667360214558314986.wt  index-5-1667360214558314986.wt  index-6-1667360214558314986.wt  sizeStorer.wt
app/db/mongodb/diagnostic.data/: metrics.2023-09-08T12-46-12Z-00000  metrics.2023-09-08T12-47-01Z-00000  metrics.2023-09-08T13-40-44Z-00000  metrics.2023-09-08T13-43-09Z-00000  metrics.2023-09-08T13-58-21Z-00000  metrics.2023-09-08T14-00-59Z-00000  metrics.2023-09-11T04-37-48Z-00000  metrics.2023-09-11T10-42-35Z-00000  metrics.interim
app/models/: item.py  user.py
app/schemas/: item.py  user.py
src/odmantic_fastapi/: __init__.py
