[project]
name = "odmantic-fastapi"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "odmantic>=0.9.2",
    "fastapi>=0.103.1",
    "uvicorn[standard]>=0.23.2",
    "shortuuid>=1.0.11",
    "pydantic==1.10.12",
    "email-validator==1.3.1",
    "elasticsearch-dsl>=8.9.0",
    "locust>=2.16.1",
    "faker>=19.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
